2009-10-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Consts.R (Const): nicer error message when 'name' is invalid.

2009-10-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-fun.R (beta, lbeta): new methods added

	* src/utils.c (my_mpfr_beta, my_mpfr_lbeta): own C functions,
	calling mpfr_*() ones, for beta() and lbeta().

	* tests/special-fun-ex.R (B,lB): add tests for beta(), lbeta()

2009-09-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Makevars.win: -lmpfr *before* -lgmp  (does matter some places)

2009-09-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/mpfr.R (mpfrVersion): factor out .mpfrVersion()

2009-09-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.1-7; released to CRAN

	* R/mpfr.R (mpfrVersion): amend for funny version string on Debian
	testings.

	* R/mpfr.R (mpfrVersion): new utility
	* src/utils.c (R_mpfr_get_version): C level
	* man/utils.Rd: doc

	* src/Ops.c (Math_mpfr): older MPFR libraries do not provide Li2().

2009-09-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Math.R (factorial): method which rounds in integer case.
	* man/mpfr-class.Rd: docu and examples.

	* man/is.whole.Rd: new for new  is.whole()

2009-09-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-fun.R (Li2): add Li2()

	* man/mpfr-class.Rd: explicitly "enumerate" the 'Math' and
	'Summary' group functions.

2009-09-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.1-6, CRAN-released on 2009-09-04

	* R/Math.R (Math2, i.e., round, signif): allow missing digits
	{ => default digits = 0 or 6, respectively}.

	* R/mpfr.R (print, etc): use drop0trailing = TRUE per default.

	* R/as.R (formatMpfr): renamed from .format.mpfr; finalize using
	prettyNum(), add corresponding arguments and document:
	* man/formatMpfr.Rd: new

	* src/convert.c (mpfr2str): allocate the char 'ch' ourselves,
	carefully using R_alloc() and S_realloc(); unfortunately, the MPFR